<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ProfileFragment">

    <ProgressBar
        android:id="@+id/profile_progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/profile_title"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title_text" />

    <LinearLayout
        android:id="@+id/profile_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/search_side_margin"
        android:layout_marginLeft="@dimen/search_side_margin"
        android:layout_below="@id/profile_title"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/profile_search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/find_profile_hint"
            android:layout_weight="2"/>
        <ImageButton
            android:id="@+id/profile_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_24dp"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorWhite"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_below="@id/profile_search_layout"
        android:layout_margin="8dp"
        android:contentDescription="@string/profile_title_text"
        android:src="@mipmap/ic_profile_stub_round" />

    <LinearLayout
        android:id="@+id/profile_date_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_search_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/profile_date_label" />

        <TextView
            android:id="@+id/profile_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_date_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_nick_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/profile_nick_label" />

            <TextView
                android:id="@+id/profile_nick_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_nick_name" />

        </LinearLayout>

        <!-- divisor -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_full_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/profile_full_name_label" />

            <TextView
                android:id="@+id/profile_full_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_full_name" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
